# pdf_compare_ai_tool

./: .env.example  .gitignore  AI_SUMMARIZATION.md  IMPLEMENTATION_SUMMARY.md  PDF_DOWNLOAD_FEATURE.md  QUICK_START.md  README.md  prompt.md  pyproject.toml  requirements.txt  test_pdf_generation.py  test_table_wrapping.py
.streamlit/: config.toml
src/: pdf_compare_pro.py  pdf_compare_solution.py
src/app/: streamlit_app.py
src/pdf_compare/: __init__.py  baseline.py  pro.py  visual.py
src/pdf_compare_ai_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/utils/: __init__.py  compare_image.py  compare_table.py  compare_text.py  env.py  extractor.py  pdf_generator.py  report.py
tests/: test_core.py
