[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-compare-ai-tool"
version = "0.1.0"
description = "AI-driven PDF comparison (baseline & pro)"
readme = "README.md"
requires-python = ">=3.10"
# Dependencies are managed via requirements.txt to keep env consistent.
# Optionally move them here later.

[project.scripts]
pdf-compare-baseline = "pdf_compare.baseline:main"
pdf-compare-pro = "pdf_compare.pro:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "pdf_compare",
  "pdf_compare.*",
  "utils",
  "utils.*",
]
